--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -147,7 +147,6 @@ h3 {
   letter-spacing: -0.02em;
   line-height: 0.9;
   font-weight: 700;
-  margin: 0;
 }
 
 /* Heading Scale */
@@ -328,6 +327,7 @@ button {
   @media (min-width: $breakpoint-md) {
     .container {
       display: flex;
+      justify-content: center;
       align-items: center;
     }
   }
