--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -142,6 +142,10 @@ button {
   font-family: var(--font-inter), sans-serif;
 }
 
+p {
+  line-height: 1.3;
+}
+
 // ============================================
 // CONTAINER
 // ============================================
