--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -74,34 +74,6 @@ h1,
   }
 }
 
-.text-hero {
-  display: grid;
-  justify-items: center;
-  padding: 0 1rem;
-  gap: $spacing-2;
-  z-index: $z-index-dropdown;
-  text-align: center;
-  margin: auto;
-  font-family: $font-family-heading;
-  color: $neutral-white;
-
-  small {
-    font-weight: $font-weight-bold;
-    letter-spacing: $letter-spacing-wide;
-    text-transform: uppercase;
-  }
-
-  h1 {
-    font-size: $font-size-7xl;
-    letter-spacing: $letter-spacing-tighter;
-    text-transform: capitalize;
-  }
-
-  p {
-    max-width: 450px;
-  }
-}
-
 h2,
 .h2 {
   font-size: 1.44rem;
@@ -160,6 +132,36 @@ small {
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
+}
+
+// ============================================
+// HERO
+// ============================================
+
+.hero-sm {
+  position: relative;
+  position: relative;
+  padding-top: 6rem;
+  padding-bottom: 3rem;
+  .text-hero {
+    display: grid;
+    justify-items: center;
+    padding: 0 1rem;
+    z-index: $z-index-dropdown;
+    text-align: center;
+    margin: auto;
+    color: $neutral-white;
+
+    h1 {
+      font-size: $font-size-5xl;
+      margin-bottom: 0.25rem;
+      letter-spacing: $letter-spacing-tighter;
+    }
+    p {
+      max-width: 400px;
+      font-weight: 300;
+    }
+  }
 }
 
 // ============================================
